# ChangeLog for x11-wm/treewm
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/treewm/ChangeLog,v 1.15 2005/12/24 19:07:08 vanquirius Exp $

  24 Dec 2005; Marcelo Goes <vanquirius@gentoo.org> treewm-0.4.5.ebuild:
  Add compilation fix from bug 86453. Thanks to Francisco Jose Canizares
  Santofimia <telefrancisco at lycos dot es>.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> treewm-0.4.4.ebuild,
  treewm-0.4.5.ebuild:
  virtual/glibc -> virtual/libc

  26 Feb 2004; Sven Blumenstein <bazik@gentoo.org> treewm-0.4.5.ebuild:
  Stable on sparc.

*treewm-0.4.5 (16 Sep 2003)

  16 Sep 2003; <chuck@gentoo.org> treewm-0.4.5.ebuild:
  Version bump, thanks to Rudolf Polzer <gentoo-oe@durchnull.de>.
  Closes bug #28812.
  18 Feb 2004; Thomas Raschbacher <lordvan@gentoo.org> treewm-0.4.5.ebuild:
  0.4.5: Marked stable on x86
  0.4.4: added sys-apps/chpax dep; Thanks to James Lund <vax@ufreeze.com>
  Bug #39542 

*treewm-0.4.4 (14 Sep 2003)
  14 Sep 2003; Thomas Raschbacher <lordvan@gentoo.org> treewm-0.4.4.ebuild:
  version bump(finally- after mailing the author :)
	
*treewm-0.4.3 (10 Sep 2003)
  12 Sep 2003; Thomas Raschbacher <lordvan@gentoo.org> treewm-0.4.3 - digest:
  wrong digest
  10 Sep 2003; Brandon Hale <tseng@gentoo.org> treewm-0.4.3.ebuild:
  Version bump, thanks to Rudolf Polzer.

*treewm-0.4.2 (09 Sep 2003)
  09 Sep 2003; Thomas Raschbacher <lordvan@gentoo.org>: added metadata.xml

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*treewm-0.4.2 (12 Aug 2002)

  04 Sep 2002; Matthew Kennedy <mkennedy@gentoo.org>
  treewm-0.4.2.ebuild, files/treewm-0.4.2-gcc3-gentoo.patch, ChangeLog :

  Resolves bug #7443. Big patch for GCC3.2 support. Definitely an
  upstreamer.

  12 Aug 2002; Joachim Blaabjerg <styx@gentoo.org> treewm-0.4.2.ebuild:

  Initial import. Ebuild submitted by Thomas Raschbacher (LordVan,
  <lordvan@lordvan.com>).