@@ -1,6 +1,24 @@
-MD5 e596b3b4ad471e334164666bd0753bae ChangeLog 1966
-MD5 18cde1faa2834be4486edcdfe64a447a files/digest-treewm-0.4.4 64
-MD5 0ff668f3a047f8841efdfc9cbfc96639 files/digest-treewm-0.4.5 64
-MD5 d8597b1d818d8453c86336611b0bff71 metadata.xml 355
+DIST treewm-0.4.4.tar.bz2 86911
+DIST treewm-0.4.5.tar.bz2 87098 RMD160 cdd46e6f9f9e80dbb02d88d89f552dc54fb51a90 SHA1 6b738752f38a208d3519673a70f12cee4be9e3bc SHA256 3daea1c8d5dfe44bfe4e038e112f7ae5044c7978b196acd0258ac6f51e2f8c13
+EBUILD treewm-0.4.4.ebuild 681 RMD160 f8b39627048939d26591c2ed2cc9dbe2e583b8d6 SHA1 5cd1856cb9e0c3854f92bc449d36afcf1686984c SHA256 51a54ae8226053e9aa5e21ec2c4ba80d7311ab5272b2b748cabb5fe05c75b2ce
 MD5 588e45f0fbf9aedbb19d629a60183a35 treewm-0.4.4.ebuild 681
-MD5 286055915c83aa8f7647e7340e1bd0c3 treewm-0.4.5.ebuild 892
+RMD160 f8b39627048939d26591c2ed2cc9dbe2e583b8d6 treewm-0.4.4.ebuild 681
+SHA256 51a54ae8226053e9aa5e21ec2c4ba80d7311ab5272b2b748cabb5fe05c75b2ce treewm-0.4.4.ebuild 681
+EBUILD treewm-0.4.5.ebuild 943 RMD160 97b986c9f8a747f2dac762795925403119d10fe6 SHA1 fb36a29fa8b9ca9e405655e821f7a1e9a6f2497d SHA256 68b16359b55f419992d68bca71ca775275276c353932f5624dfe154a6d7acf0c
+MD5 48a7aef50098e4be52b96a0c88b63b6e treewm-0.4.5.ebuild 943
+RMD160 97b986c9f8a747f2dac762795925403119d10fe6 treewm-0.4.5.ebuild 943
+SHA256 68b16359b55f419992d68bca71ca775275276c353932f5624dfe154a6d7acf0c treewm-0.4.5.ebuild 943
+MISC ChangeLog 2127 RMD160 4dc70545fb572818453fa8d89aee67e23c48fdd9 SHA1 32c3d7e125adc30b26bc92c86f191be9841fbb3c SHA256 cea60ad60f1e18b3e2836011eb9fe2b0af30dd338edc3ddfffa23bfd629d0489
+MD5 71679ad3f42e969c7f7d7c1a7c60eb11 ChangeLog 2127
+RMD160 4dc70545fb572818453fa8d89aee67e23c48fdd9 ChangeLog 2127
+SHA256 cea60ad60f1e18b3e2836011eb9fe2b0af30dd338edc3ddfffa23bfd629d0489 ChangeLog 2127
+MISC metadata.xml 355 RMD160 db36c4b3bacf9a29a5af733262b541a3da7b6924 SHA1 6da270cf54f87327f3c981d7db66414bade5834d SHA256 c317d84ea737e3da193b9f100fa7409363cf91d824096699c71f3d01f456feeb
+MD5 d8597b1d818d8453c86336611b0bff71 metadata.xml 355
+RMD160 db36c4b3bacf9a29a5af733262b541a3da7b6924 metadata.xml 355
+SHA256 c317d84ea737e3da193b9f100fa7409363cf91d824096699c71f3d01f456feeb metadata.xml 355
+MD5 18cde1faa2834be4486edcdfe64a447a files/digest-treewm-0.4.4 64
+RMD160 d72ad98aa58252440a82df415d82399fe0d85406 files/digest-treewm-0.4.4 64
+SHA256 ddd1e16b221ba25cb64786c11a0d95462c60b395c45223c266ddda053c5d7562 files/digest-treewm-0.4.4 64
+MD5 fb9fa98cf384c4f8545920fb8bf3c915 files/digest-treewm-0.4.5 238
+RMD160 35be11fdb9aaa77e36670450b0f2569025e3737c files/digest-treewm-0.4.5 238
+SHA256 5695e7d8aa76b3fbf30963a37d49656bf2de1bc79aaba2a57a61e5d366ec89da files/digest-treewm-0.4.5 238
