@@ -1,1 +1,3 @@
 MD5 912ef3930ca6914bf5118f7bbce3fef6 treewm-0.4.5.tar.bz2 87098
+RMD160 cdd46e6f9f9e80dbb02d88d89f552dc54fb51a90 treewm-0.4.5.tar.bz2 87098
+SHA256 3daea1c8d5dfe44bfe4e038e112f7ae5044c7978b196acd0258ac6f51e2f8c13 treewm-0.4.5.tar.bz2 87098
