@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/treewm
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/treewm/ChangeLog,v 1.15 2005/12/24 19:07:08 vanquirius Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/treewm/ChangeLog,v 1.16 2006/12/12 23:46:29 masterdriverz Exp $
+
+  12 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
+  treewm-0.4.5.ebuild:
+  Fix modular xorg deps; thanks to Patrick Lauer for reporting; bug 150275
 
   24 Dec 2005; Marcelo Goes <vanquirius@gentoo.org> treewm-0.4.5.ebuild:
   Add compilation fix from bug 86453. Thanks to Francisco Jose Canizares
